--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,10 @@
     </distributionManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <integration.tags>integration</integration.tags>
+        <junit.version>5.1.0</junit.version>
+        <mockito.version>2.21.0</mockito.version>
     </properties>
-
 
     <dependencies>
         <dependency>
@@ -55,41 +57,32 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.1.0</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.21.0</version>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>2.21.0</version>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
-            <!--to allow using lambda-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.5</version>
-                <configuration>
-                    <goalPrefix>deploy-deps</goalPrefix>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>helpmojo</goal>
-                            <goal>descriptor</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -100,28 +93,13 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.22.1</version>
                 <configuration>
-                    <properties>
-                        <excludeTags>${excludeTests}</excludeTags>
-                    </properties>
+                    <excludedGroups>${integration.tags}</excludedGroups>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.1.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.1.0</version>
-                    </dependency>
-                </dependencies>
             </plugin>
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
@@ -136,68 +114,15 @@
             </plugin>
         </plugins>
     </build>
+
     <profiles>
         <profile>
-            <!-- run with: mvn -Prun-its -->
-            <id>run-its</id>
-            <build>
-                <defaultGoal>verify</defaultGoal>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-invoker-plugin</artifactId>
-                        <version>3.0.0</version>
-                        <executions>
-                            <execution>
-                                <id>integration-test</id>
-                                <goals>
-                                    <goal>install</goal>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <streamLogs>false</streamLogs>
-                                    <debug>true</debug>
-                                </configuration>
-                            </execution>
-                        </executions>
-
-                        <configuration>
-                            <encoding>UTF-8</encoding>
-                            <debug>true</debug>
-                            <projectsDirectory>src/it</projectsDirectory>
-                            <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-                            <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
-                            <settingsFile>src/it/settings.xml</settingsFile>
-                            <showErrors>true</showErrors>
-                            <streamLogs>true</streamLogs>
-                            <parallelThreads>1</parallelThreads>
-                            <pomIncludes>
-                                <pomInclude>*/pom.xml</pomInclude>
-                            </pomIncludes>
-                            <postBuildHookScript>verify</postBuildHookScript>
-                            <filterProperties>
-                                <repository.proxy.url>${repository.proxy.url}</repository.proxy.url>
-                            </filterProperties>
-                            <mavenOpts>-Xmx256m</mavenOpts>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-            <reporting>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-invoker-plugin</artifactId>
-                        <reportSets>
-                            <reportSet>
-                                <reports>
-                                    <report>report</report>
-                                </reports>
-                            </reportSet>
-                        </reportSets>
-                    </plugin>
-                </plugins>
-            </reporting>
+            <!-- run with: mvn test -Pit -->
+            <id>it</id>
+            <properties>
+                <!--redefine integration.tags to be empty, so that the integration tests will not be skipped-->
+                <integration.tags/>
+            </properties>
         </profile>
 
         <profile>
@@ -259,5 +184,6 @@
             </build>
         </profile>
     </profiles>
+
 
 </project>
