--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lkq</groupId>
     <artifactId>insta-db</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <scm>
         <connection>scm:git:https://github.com/lkq/insta-db.git</connection>
         <url>https://github.com/lkq/insta-db</url>
@@ -41,7 +41,7 @@
     </distributionManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <integration.tags>integration</integration.tags>
+        <tests.excluded.tags>integration</tests.excluded.tags>
         <junit.version>5.1.0</junit.version>
         <mockito.version>2.21.0</mockito.version>
     </properties>
@@ -122,7 +122,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-                    <excludedGroups>${integration.tags}</excludedGroups>
+                    <excludedGroups>${tests.excluded.tags}</excludedGroups>
                 </configuration>
             </plugin>
             <plugin>
@@ -145,13 +145,18 @@
             <!-- run with: mvn test -Pit -->
             <id>it</id>
             <properties>
-                <!--redefine integration.tags to be empty, so that the integration tests will not be skipped-->
-                <integration.tags/>
+                <!--redefine tests.excluded.tags to be empty, so that the integration tests will not be skipped-->
+                <tests.excluded.tags/>
             </properties>
         </profile>
 
         <profile>
             <id>release</id>
+            <properties>
+                <!--redefine tests.excluded.tags to be empty, so that the integration tests will not be skipped-->
+                <tests.excluded.tags/>
+            </properties>
+
             <build>
                 <plugins>
                     <plugin>
