[maven-release-plugin] prepare release insta-db-0.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.lkq</groupId>
     <artifactId>insta-db</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <scm>
         <connection>scm:git:https://github.com/lkq/insta-db.git</connection>
         <url>https://github.com/lkq/insta-db</url>
-        <tag>HEAD</tag>
+        <tag>insta-db-0.1.0</tag>
     </scm>
     <ciManagement>
         <system>travis-ci</system>
@@ -146,7 +144,7 @@
             <id>it</id>
             <properties>
                 <!--redefine tests.excluded.tags to be empty, so that the integration tests will not be skipped-->
-                <tests.excluded.tags/>
+                <tests.excluded.tags />
             </properties>
         </profile>
 
@@ -154,7 +152,7 @@
             <id>release</id>
             <properties>
                 <!--redefine tests.excluded.tags to be empty, so that the integration tests will not be skipped-->
-                <tests.excluded.tags/>
+                <tests.excluded.tags />
             </properties>
 
             <build>
