--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
     <groupId>com.github.lkq</groupId>
     <artifactId>insta-db</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.1</version>
     <scm>
         <connection>scm:git:https://github.com/lkq/insta-db.git</connection>
         <url>https://github.com/lkq/insta-db</url>
-        <tag>HEAD</tag>
+        <tag>insta-db-0.1.1</tag>
     </scm>
     <ciManagement>
         <system>travis-ci</system>
