--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.lkq</groupId>
     <artifactId>insta-db</artifactId>
-    <version>0.1.3-SNAPSHOT</version>
+    <version>0.1.3</version>
 
     <!--required for nexus staging - begin-->
     <name>Deploy Dependencies Maven Plugin</name>
@@ -17,7 +17,7 @@
     <scm>
         <connection>scm:git:https://github.com/lkq/insta-db.git</connection>
         <url>https://github.com/lkq/insta-db</url>
-        <tag>HEAD</tag>
+        <tag>insta-db-0.1.3</tag>
     </scm>
     <ciManagement>
         <system>travis-ci</system>
