--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.lkq</groupId>
     <artifactId>insta-docker</artifactId>
-    <version>0.2.1</version>
+    <version>0.2.2-SNAPSHOT</version>
 
     <!--required for nexus staging - begin-->
     <name>Insta Docker</name>
@@ -15,7 +15,7 @@
     <scm>
         <connection>scm:git:https://github.com/lkq/insta-docker.git</connection>
         <url>https://github.com/lkq/insta-docker</url>
-        <tag>insta-docker-0.2.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <ciManagement>
         <system>travis-ci</system>
